test_suite/tests/ui/struct-representation/internally-tagged-tuple.stderr
error: #[serde(tag = "...")] can only be used on enums and structs with named fields
 --> tests/ui/struct-representation/internally-tagged-tuple.rs:5:9
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | #[serde(tag = "type")]
5 | struct S(u8, u8);
  |         ^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
